Fixing column spacing and margins

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -94,18 +94,16 @@
 
 
 /* global styling */
-a {
-  text-decoration:none;
-}
-
 .app {
   font-family: sans-serif, "Helvetica";
   background-color: #FFFFFF;
   color: #2C2A2D;
+  width: 100%;
+  height: 100%;
+  margin-right: 1vh;
   display: grid;
-  grid-auto-flow: row dense;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 52vmin auto auto;
+  grid-template-columns: auto auto;
+  grid-template-rows: 37vmin auto auto;
   grid-template-areas: 
   'header  header'
   'news    releases'
