--- a/src/containers/Sidebar/index.css
+++ b/src/containers/Sidebar/index.css
@@ -26,7 +26,3 @@
   width: 15vmin;
   color: black;
 }
-
-.a {
-  text-decoration: none;
-}
